# vendaja

./: .gitignore  DEVELOPMENT.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.lock.txt  requirements.txt
alembic/: env.py
alembic/versions/: 8f2518a90a6f_remove_uniqueconstraint_of_name_in_.py
vendaja/: app.py  setup.py
vendaja/enums/: payment_status.py  receipt_status.py
vendaja/infra/database/: database.py  init_db.py  session.py
vendaja/models/: product.py  receipt.py  sale.py  store.py
vendaja/routers/: auth.py  product.py  store.py
vendaja/schemas/: auth.py  product.py  receipt.py  sale.py  store.py  token.py
vendaja/services/: exceptions.py  product.py  store.py
vendaja/settings/: settings.py
vendaja/tests/: start_app.py  store.py
vendaja/utils/security/: cryptographer.py  data_processing.py  hasher.py  token_manager.py
