[project]
name = "vendaja"
version = "0.1.0"
description = "An API for Vendaja"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "n"}
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pycryptodome (>=3.23.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
